les4-ingress/.history/ingress-hosts_20230823132148.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts-rules

spec:
  rules:
  - host: main.azimuthpro.online
    http:
      paths:
      -  backend:
            serviceName: app-service
            servicePort: 80

  - host: api.example.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
