les4-ingress/.history/ingress-hosts_20230823134353.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts-rules

spec:
  rules:
  - host: main.azimuthpro.online
    http:
      paths:
        backend:
          service:
            name: main
            port:
              number: 8080

  - host: web1.azimuthpro.online
    http:
      paths:
        - backend:
            serviceName: web1
            servicePort: 80

  - host: web2.azimuthpro.online
    http:
      paths:
        - backend:
            serviceName: web2
            servicePort: 80

  - host: tomcat.azimuthpro.online
    http:
      paths:
        - backend:
            serviceName: tomcat
            servicePort: 8080
