les4-ingress/.history/ingress-path_20230823135929.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path-rules

spec:
  rules:
  - host: main.azimuthpro.online
    http:
      paths:
      - path: /webx
        pathType: Prefix
        backend:
          service:
            name: main
            port:
              number: 8080
